<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        android:padding="@dimen/list_item_padding_sides"
        app:columnCount="2">

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/label_location"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"/>

        <Spinner
            android:id="@+id/state_spinner"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"
            >
        </Spinner>

        <android.support.v7.widget.Space
            android:layout_height="@dimen/detail_view_padding_vertical"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/label_downpayment"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"/>

        <Spinner
            android:id="@+id/loantovalue_spinner"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"
            >
        </Spinner>

        <android.support.v7.widget.Space
            android:layout_height="@dimen/detail_view_padding_vertical"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/label_credit_score"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"/>

        <Spinner
            android:id="@+id/credit_score_spinner"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"
            >
        </Spinner>

        <android.support.v7.widget.Space
            android:layout_height="@dimen/detail_view_padding_vertical"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>

        <TextView
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/label_program"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"/>

        <Spinner
            android:id="@+id/loan_programm_spinner"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="0"
            >
        </Spinner>

    </android.support.v7.widget.GridLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/buttonCancelDescription"
            android:text="@string/buttonCancel"
            />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/buttonCreateProfileDescription"
            android:text="@string/buttonCreate"
            />

    </LinearLayout>
</LinearLayout>

